--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.9.0
 Django==5.2.4
+django-markdownx==4.0.9
+Markdown==3.8.2
+pillow==11.3.0
 psycopg==3.2.9
 python-dotenv==1.1.1
 sqlparse==0.5.3
