--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,28 @@
 asgiref==3.9.0
+Brotli==1.1.0
+cffi==1.17.1
+choreographer==1.0.9
+cssselect2==0.8.0
 Django==5.2.4
 django-markdownx==4.0.9
+fonttools==4.59.0
+kaleido==1.0.0
+logistro==1.1.0
 Markdown==3.8.2
+narwhals==1.48.0
+orjson==3.11.0
+packaging==25.0
 pillow==11.3.0
+plotly==6.2.0
 psycopg==3.2.9
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.17.2
 python-dotenv==1.1.1
+simplejson==3.20.1
 sqlparse==0.5.3
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+weasyprint==65.1
+webencodings==0.5.1
+zopfli==0.2.3.post1
