--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@ __pycache__/
 
 # Virtualenv
 venv/
-.env
+
+# Secrets
+.env.local
+.env.production
 
 # Django staticfiles
 /staticfiles/
@@ -17,7 +20,3 @@ venv/
 
 # VSCode
 .vscode/
-
-# Secrets
-*.env
-
