--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,28 @@ asgiref==3.9.0
 Brotli==1.1.0
 cffi==1.17.1
 choreographer==1.0.9
+contourpy==1.3.3
 cssselect2==0.8.0
+cycler==0.12.1
 dj-database-url==3.0.1
 Django==5.2.4
 django-markdownx==4.0.9
 docraptor==3.1.0
 fonttools==4.59.0
 gunicorn==23.0.0
-kaleido==1.0.0
+kiwisolver==1.4.9
 logistro==1.1.0
 Markdown==3.8.2
+matplotlib==3.10.5
 narwhals==1.48.0
+numpy==2.3.2
 orjson==3.11.0
 packaging==25.0
 pillow==11.3.0
-plotly==6.2.0
 psycopg==3.2.9
 pycparser==2.22
 pydyf==0.11.0
+pyparsing==3.2.3
 pyphen==0.17.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
