--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pyparsing==3.2.3
 pyphen==0.17.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+requests==2.32.4
 simplejson==3.20.1
 six==1.17.0
 sqlparse==0.5.3
