--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.9.0
+boto3==1.40.17
+botocore==1.40.17
 Brotli==1.1.0
+certifi==2025.8.3
 cffi==1.17.1
+charset-normalizer==3.4.3
 choreographer==1.0.9
 contourpy==1.3.3
 cssselect2==0.8.0
@@ -8,9 +12,13 @@ cycler==0.12.1
 dj-database-url==3.0.1
 Django==5.2.4
 django-markdownx==4.0.9
+django-storages==1.14.6
 docraptor==3.1.0
 fonttools==4.59.0
 gunicorn==23.0.0
+idna==3.10
+jmespath==1.0.1
+kaleido==1.0.0
 kiwisolver==1.4.9
 logistro==1.1.0
 Markdown==3.8.2
@@ -20,6 +28,7 @@ numpy==2.3.2
 orjson==3.11.0
 packaging==25.0
 pillow==11.3.0
+plotly==6.2.0
 psycopg==3.2.9
 pycparser==2.22
 pydyf==0.11.0
@@ -28,6 +37,7 @@ pyphen==0.17.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 requests==2.32.4
+s3transfer==0.13.1
 simplejson==3.20.1
 six==1.17.0
 sqlparse==0.5.3
