--- a/requirements.txt
+++ b/requirements.txt
@@ -41,8 +41,10 @@ s3transfer==0.13.1
 simplejson==3.20.1
 six==1.17.0
 sqlparse==0.5.3
+stripe==12.5.1
 tinycss2==1.4.0
 tinyhtml5==2.0.0
+typing_extensions==4.15.0
 urllib3==2.5.0
 weasyprint==65.1
 webencodings==0.5.1
